--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,6 +16,10 @@
     background-color: #111;
 }
 
+.index-body {
+    min-width: 1440px
+}
+
 .login-form-header {
     color: #f30000;
     text-align: center;
@@ -138,6 +142,402 @@
     background-color: var(--primary-color);
     color: #f30000;
     border: 1px solid #f30000;
+}
+
+/* ===== Sidebar ===== */
+
+.adm-panel-body {
+    background-color: #FAFAFB;
+}
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    padding: 10px 8px;
+    background: var(--sidebar-color);
+    transition: var(--tran-05);
+    z-index: 100;  
+}
+.sidebar.close {
+    background-color: #FAFAFB;
+    border-right: 1px solid #F30000;
+    width: 88px;
+}
+
+/* ===== Reusable code - Here ===== */
+.sidebar li {
+    height: 50px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.sidebar header .image,
+.sidebar .icon {
+    min-width: 60px;
+    border-radius: 6px;
+}
+
+.sidebar .icon {
+    min-width: 60px;
+    border-radius: 6px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.sidebar .text,
+.sidebar .icon {
+    color: var(--text-color);
+    transition: var(--tran-03);
+}
+
+.sidebar .text {
+    font-size: 10px;
+    font-weight: 500;
+    white-space: nowrap;
+    opacity: 1;
+}
+
+/* =========================== */
+
+.sidebar header {
+    position: relative;
+}
+
+.sidebar header .image-text {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.sidebar header .logo-text {
+    display: flex;
+    flex-direction: column;
+}
+header .image-text .name {
+    margin-top: 2px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+header .image-text .profession {
+    font-size: 16px;
+    margin-top: -2px;
+    display: block;
+}
+
+.sidebar header .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar header .image img {
+    width: 40px;
+    border-radius: 6px;
+}
+
+.sidebar header .toggle {
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%) rotate(180deg);
+    height: 25px;
+    width: 25px;
+    background-color: var(--primary-color);
+    color: var(--sidebar-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    cursor: pointer;
+    transition: var(--tran-05);
+}
+
+body.dark .sidebar header .toggle {
+    color: var(--text-color);
+}
+
+.sidebar.close .toggle {
+    transform: translateY(-50%) rotate(0deg);
+}
+
+.sidebar .menu {
+    margin-top: 40px;
+}
+
+.sidebar li.search-box {
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    cursor: pointer;
+    transition: var(--tran-05);
+}
+
+.sidebar li.search-box input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    background-color: var(--primary-color-light);
+    color: var(--text-color);
+    border-radius: 6px;
+    font-size: 17px;
+    font-weight: 500;
+    transition: var(--tran-05);
+}
+
+.search-term {
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 15px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.sidebar li a {
+    list-style: none;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: var(--tran-03);
+    color: #000;
+}
+
+.sidebar li a:hover {
+    background-color: #f30000;
+    color: #FAFAFB;
+}
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text {
+    color: var(--sidebar-color);
+}
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text {
+    color: var(--text-color);
+}
+
+.sidebar .menu-bar {
+    height: calc(100% - 55px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+.menu-bar::-webkit-scrollbar {
+    display: none;
+}
+.sidebar .menu-bar .mode {
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    position: relative;
+    transition: var(--tran-05);
+}
+
+.menu-bar .mode .sun-moon {
+    height: 50px;
+    width: 60px;
+}
+
+.mode .sun-moon i {
+    position: absolute;
+}
+.mode .sun-moon i.sun {
+    opacity: 0;
+}
+body.dark .mode .sun-moon i.sun {
+    opacity: 1;
+}
+body.dark .mode .sun-moon i.moon {
+    opacity: 0;
+}
+
+.menu-bar .bottom-content .toggle-switch {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.toggle-switch .switch {
+    position: relative;
+    height: 22px;
+    width: 40px;
+    border-radius: 25px;
+    background-color: var(--toggle-color);
+    transition: var(--tran-05);
+}
+
+.switch::before {
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background-color: var(--sidebar-color);
+    transition: var(--tran-04);
+}
+
+body.dark .switch::before {
+    left: 20px;
+}
+
+.tittle-adm-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.adm-panel-index {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+/*Index Page CSS*/
+
+.section-header-slogan {
+    display: flex;
+    justify-content: center;
+    background: #FAFAFB;
+    padding-top: 10px;
+}
+
+.section-header-slogan-text {
+    flex: 1.7;
+}
+
+.section-header-social {
+    padding-left: 85px;
+    flex: 1;
+}
+
+.header-social-list {
+    width: 180px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+}
+
+.header-social-item a svg {
+    width: 18px;
+    height: 18px;
+}
+
+.header-menu-logo {
+    margin-bottom: 15px;
+}
+
+.header-menu-logo a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+}
+
+.text-logo {
+    margin-top: 15px;
+}
+
+.section-header-menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #000;
+    height: 100px;
+}
+
+.header-menu-list {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.menu-item {
+    margin-right: 40px;
+}
+
+.menu-item a {
+    font-size: 14px;
+    text-decoration: none;
+    color: #fff;
+    font-family: 'Montserrat';
+    font-style: normal;
+    line-height: 20px;
+}
+
+.active-menu {
+    border-bottom: 1px solid #f30000;
+    padding-bottom: 2px;
+}
+
+.form-search-index {
+    display: flex;
+}
+
+.header-search-form form input {
+    width: 321px;
+    height: 23px;
+    background: #FAFAFB;
+    border: none;
+    border-radius: 30px;
+    outline: 0;
+    padding: 12px 25px;
+}
+
+.header-menu-lupa {
+    margin-right: -22px;
+    margin-top: 4px;
+    z-index: 100;
+    color: #828282;
+}
+
+.budget-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.budget-text {
+    color: #fff;
+    margin-left: 10px;
+    font-size: 16px;
+}
+
+.banner-section-area img {
+    width: 100%;
+    height: 550px;
+}
+
+.section-categories-area {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
 }
 
 @media (max-width: 725px) {
