--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,10 +16,6 @@
     background-color: #111;
 }
 
-.index-body {
-    min-width: 1440px
-}
-
 .login-form-header {
     color: #f30000;
     text-align: center;
@@ -419,25 +415,27 @@ body.dark .switch::before {
 /*Index Page CSS*/
 
 .section-header-slogan {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-areas: 
+        "area1 area1 area2 . .";
     background: #FAFAFB;
-    padding-top: 10px;
-}
-
-.section-header-slogan-text {
-    flex: 1.7;
+    margin: 10px 20px;
 }
 
 .section-header-social {
-    padding-left: 85px;
+    grid-area: area1;
     flex: 1;
 }
 
+.section-header-slogan-text {
+    grid-area: area2;
+    flex: 1.7;
+}
+
 .header-social-list {
-    width: 180px;
+    width: 150px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     list-style: none;
 }
@@ -445,6 +443,10 @@ body.dark .switch::before {
 .header-social-item a svg {
     width: 18px;
     height: 18px;
+}
+
+.section-header-menu-area-all {
+    margin: 10px 20px;
 }
 
 .header-menu-logo {
@@ -466,20 +468,18 @@ body.dark .switch::before {
 
 .section-header-menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #000;
     height: 100px;
+    padding: 0 20px;
 }
 
 .header-menu-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     list-style: none;
-}
-
-.menu-item {
-    margin-right: 40px;
+    width: 400px;
 }
 
 .menu-item a {
@@ -489,6 +489,10 @@ body.dark .switch::before {
     font-family: 'Montserrat';
     font-style: normal;
     line-height: 20px;
+}
+
+.menu-item:hover {
+    border-bottom: 1px solid #f30000;
 }
 
 .active-menu {
@@ -517,10 +521,11 @@ body.dark .switch::before {
     color: #828282;
 }
 
-.budget-area {
+.budget-area a{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 }
 
 .budget-text {
@@ -534,10 +539,136 @@ body.dark .switch::before {
     height: 550px;
 }
 
-.section-categories-area {
+.section-categories-area-tittle {
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    margin-bottom: 70px;
+}
+
+.section-categories-groups {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.category-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 380px;
+    height: 420px;
+    padding: 20px;
+    background: #fff;
+    border: 1px solid #f2f2f3;
+    border-radius: 20px;
+}
+
+.category-box-icon img {
+    width: 100px;
+    height: 100px;
+}
+
+.category-box-tittle h3 {
+    border-bottom: 1px solid #f30000;
+    padding-bottom: 18px;
+    margin-bottom: 18px;
+}
+
+.category-box-text {
+    color: #636363;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 40px;
+}
+
+.category-box-button a, .section-catalog-button a {
+    width: 150px;
+    height: 30px;
+    background-color: #F30000;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.category-box-button a:hover, .section-catalog-button a:hover {
+    background-color: #fff;
+    color: #F30000;
+}
+
+.section-catalog-download {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-catalog-img img{
+    width: 460px;
+    height: 320px;
+}
+
+.section-catalog-tittle {
+    margin-bottom: 25px;
+}
+
+.catalog-tittle-underline {
+    width: 80px;
+    height: 2px;
+    background-color: #f30000;
+    margin-top: 15px;
+}
+
+.section-catalog-text {
+    margin-bottom: 45px;
+}
+
+.products-carrousell {
+    height: 350px;
+    margin: 0 20px;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-button-next::after, .swiper-button-prev:after {
+    font-size: 20px !important;
 }
 
 @media (max-width: 725px) {
