--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -561,8 +561,8 @@ body.dark .switch::before {
     height: 420px;
     padding: 20px;
     background: #fff;
-    border: 1px solid #f2f2f3;
     border-radius: 20px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
 }
 
 .category-box-icon img {
@@ -583,7 +583,7 @@ body.dark .switch::before {
     margin-bottom: 40px;
 }
 
-.category-box-button a, .section-catalog-button a {
+.category-box-button a, .section-catalog-button a, .budget-button a {
     width: 150px;
     height: 30px;
     background-color: #F30000;
@@ -599,7 +599,7 @@ body.dark .switch::before {
     line-height: 17px;
 }
 
-.category-box-button a:hover, .section-catalog-button a:hover {
+.category-box-button a:hover, .section-catalog-button a:hover, .budget-button a:hover {
     background-color: #fff;
     color: #F30000;
 }
@@ -632,7 +632,20 @@ body.dark .switch::before {
 
 .products-carrousell {
     height: 350px;
-    margin: 0 20px;
+    margin: 0 100px;
+}
+
+.products-carrousell-tittle {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 50px 40px 50px;
+}
+
+.products-carrousell-tittle a {
+    text-decoration: none;
+    color: #F30000;
+    font-size: 15px;
+    line-height: 18px;
 }
 
 .swiper {
@@ -640,7 +653,7 @@ body.dark .switch::before {
     height: 100%;
 }
 
-  .swiper-slide {
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -653,7 +666,6 @@ body.dark .switch::before {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     -webkit-justify-content: center;
-    justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
@@ -668,7 +680,33 @@ body.dark .switch::before {
 }
 
 .swiper-button-next::after, .swiper-button-prev:after {
-    font-size: 20px !important;
+    font-size: 18px !important;
+    width: auto !important;
+}
+
+.product-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+    padding: 40px;
+    width: 230px;
+    height: 350px;
+}
+
+.product-box-img img {
+    width: 180px;
+    height: 180px;
+    margin-bottom: 20px;
+}
+
+.product-box-description {
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 11px;
+    line-height: 13px;
+    color: #636363;
 }
 
 @media (max-width: 725px) {
