--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -512,6 +512,7 @@ body.dark .switch::before {
     border-radius: 30px;
     outline: 0;
     padding: 12px 25px;
+    font-size: 12px;
 }
 
 .header-menu-lupa {
@@ -532,6 +533,10 @@ body.dark .switch::before {
     color: #fff;
     margin-left: 10px;
     font-size: 16px;
+}
+
+.banner-section-area {
+    width: 100%;
 }
 
 .banner-section-area img {
@@ -632,7 +637,7 @@ body.dark .switch::before {
 
 .products-carrousell {
     height: 350px;
-    margin: 0 100px;
+    margin: 0 50px 100px;
 }
 
 .products-carrousell-tittle {
@@ -680,8 +685,13 @@ body.dark .switch::before {
 }
 
 .swiper-button-next::after, .swiper-button-prev:after {
-    font-size: 18px !important;
-    width: auto !important;
+    font-size: 14px !important;
+    color: #ababab;
+    border: 1px solid #ccc;
+    border-radius: 360px;
+    background: #FFFFFF;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 5px;
 }
 
 .product-box {
@@ -689,9 +699,11 @@ body.dark .switch::before {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-    padding: 40px;
-    width: 230px;
+    padding: 25px;
+    background: #FFFFFF;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 250px;
     height: 350px;
 }
 
@@ -707,6 +719,53 @@ body.dark .switch::before {
     font-size: 11px;
     line-height: 13px;
     color: #636363;
+}
+
+.budget-button a {
+    width: 200px;
+    height: 35px;
+    background-color: #fff;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+    text-decoration: none;
+    color: #f30000;
+    border: 1px solid #f30000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.budget-button a:hover {
+    background-color: #F30000;
+    border: 1px solid #fff;
+    color: #fff;
+}
+
+.budget-button a img {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+}
+
+.section-two-banners {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.section-banner-left, .section-banner-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-banner-left img, .section-banner-right img{
+    filter: drop-shadow(-1px 2px 4px rgba(0, 0, 0, 0.1));
+    border-radius: 15px;
 }
 
 @media (max-width: 725px) {
