--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,27 +12,28 @@
     --primary-color: #fff;
 }
 
-.login-body, .recover-body, .signup-body {
+.login-body {
+    background-color: #161616   ;
+}
+
+.recover-body, .signup-body {
     background-color: #FAFAFB;
 }
 
 .login-form-header, .profile-form-header {
+    border-bottom: 1px solid #bdbdbd;
     font-weight: 600;
     color: #ababab;
     text-align: center;
-}
-
-.profile-form-header {
-    border-bottom: 1px solid #bdbdbd;
     padding-bottom: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .login-form-logo, .recover-form-logo, .profile-form-image  {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 15px ;
 }
 
 .login-form-logo-circle, .recover-form-logo-circle, .profile-form-image-circle {
@@ -41,6 +42,7 @@
     align-items: center;
     background-color: #000;
     border-radius: 90px;
+    margin-bottom: 10px;
 }
 
 .profile-form-image-circle, .profile-form-image-circle img {
@@ -52,11 +54,18 @@
     border-radius: 90px;
 }
 
-.login-form-logo-circle img {
-    width: 60px;
+.login-form-logo-circle {
+    border-radius: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #161616;
 }
 
-.profile-form-image-circle input {
+.login-form-logo-circle img {
+    width: 80px;
+}
+
+.profile-form-image-circle input, .table-form-image-circle input {
     position: fixed;
     top: -10000px;
 }
@@ -134,10 +143,15 @@ label p {
     justify-content: center;
 }
 
+
 .create-account-link, .recover-password-link {
-    margin: 10px 10px 30px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
     padding-left: 5px;
     color: #f30000;
+    font-size: 10px;
 }
 
 .create-account-link a, .recover-password-link a {
@@ -146,8 +160,7 @@ label p {
 }
 
 .create-account-link a:hover, .recover-password-link a:hover {
-    border-bottom: 1px solid #f30000
-    ;
+    border-bottom: 1px solid #f30000;
 }
 
 .login-warning-success {
@@ -162,7 +175,16 @@ label p {
 }
 
 .warning {
+    margin-bottom: 15px;
     text-align: center;
+}
+
+.login-warning {
+    width: 100%;
+    font-size: 12px;
+    text-align: left;
+    padding: 10px 10px;
+    color: #f30000;
 }
 
 .password-hold {
@@ -178,7 +200,7 @@ label p {
 
 .login-form input {
     font-size: 16px;
-    width: 320px;
+    width: 340px;
     height: 40px;
     margin: 10px 0;
     border: 1px solid #f30000;
@@ -189,6 +211,19 @@ label p {
 
 .login-form label p {
     padding-left: 10px;
+}
+
+.remember-pass-area {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    color: #fff;
+    color: #9B9B9B;
+}
+
+.remember-pass-area input {
+    width: auto;
+    margin-right: 10px;
 }
 
 .add-student-form-buttons {
@@ -373,6 +408,12 @@ label p {
 
 .text-logo {
     margin-top: 15px;
+}
+
+.text-login-logo {
+    font-size: 20px;
+    color: #fff;
+    margin-top: 20px;
 }
 
 .section-header-menu, .section-header-adm-panel {
@@ -822,6 +863,134 @@ label p {
     text-decoration: none;
     color: #F30000;
 }
+
+/*Users CSS*/
+
+.section-users-table {
+    position: fixed;
+    left: 120px;
+    right: 40px;
+    margin-top: 40px;
+}
+
+.section-users-table h3 {
+    margin-bottom: 25px;
+}
+
+.section-area-users-table {
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 13px;
+}
+
+table{
+    width:100%;
+    table-layout: fixed;
+}
+
+.tbl-header{
+    background-color: #D9D9D9;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: #000;
+}
+  
+.tbl-content{
+    height: 65vh;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+    background-color: #fff;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+tr {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin: 0 20px;
+}
+
+th{
+    padding: 10px 7px;
+    text-align: left;
+    font-size: 12px;
+    color: #000;
+
+}
+  
+td{
+    padding: 10px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 10px;
+    color: #fff;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+.table-form-image-circle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.table-form-image-circle label {
+    margin: 0 0 5px 3px;
+}
+
+.img-user {
+    width: 34px;
+    height: 34px;
+    border-radius: 90px;
+    cursor: pointer;
+}
+
+.add-user-form-label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-user-form-label p {
+    color: #000;
+    margin: 0 0 10px 0  ;
+}
+
+.add-user-form-label input {
+    height: 20px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+}
+
+.form-user-submit {
+    width: 120px;
+    height: 23px;
+    background-color: #F30000;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    line-height: 17px;
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+.form-user-submit:hover {
+    background-color: #fff;
+    border: 1px solid #f30000;
+    color: #f30000;
+}
+
 @media (max-width: 725px) {
     
 }
@@ -832,10 +1001,6 @@ label p {
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-
-    .create-account-link, .recover-password-link {
-        font-size: 12px;
     }
 
     h1 {
