--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1033,6 +1033,12 @@ td{
     border-radius: 90px;
 }
 
+.edit-user-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 725px) {
     
 }
