--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -904,6 +904,11 @@ table{
     border-bottom-right-radius: 5px;
 }
 
+.tbl-header{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
 tr {
     display: flex;
     justify-content: space-between;
@@ -911,15 +916,31 @@ tr {
     flex-wrap: nowrap;
     margin: 0 20px;
 }
+
+th{
+    width: 100%;
+    padding: 10px 10px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 15px;
+    color: #000;
+    font-weight: 600;
+}
   
 td{
+    width: 100%;
     padding: 10px 7px;
-    text-align: center;
+    text-align: left;
     vertical-align:middle;
     font-weight: 300;
     font-size: 14px;
     color: #777777;
     border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+.td-users {
+    text-align: center;
+    width: 100%;
 }
 
 .add-user-form {
@@ -1039,6 +1060,138 @@ td{
     align-items: center;
 }
 
+/*Products CSS*/
+
+.section-products-table {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: 120px;
+    right: 40px;
+    margin-top: 40px;
+}
+
+.section-products-table h3 {
+    margin-bottom: 50px;
+}
+
+.filter-search-area {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.filter-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter-form {
+    margin-bottom: 20px;
+}
+
+.filter-form select {
+    height: 25px;
+    width: 210px;
+    background-color: transparent;
+    color: #989898;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 11px;
+    padding: 5px 20px 5px 5px;
+    outline: 0;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+
+.search-area {
+    display: flex;
+}
+
+.search-area input {
+    width: 400px;
+    height: 25px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    border: none;
+    border-radius: 10px;
+    outline: 0;
+    padding-left: 35px;
+    font-size: 12px;
+}
+
+.search-area-lupa {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 5px;
+    z-index: 100;
+    color: #828282;
+}
+
+.product-list-image img {
+    height: 85px;
+    width: 85px;
+
+}
+
+.fabrication-info, .date-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    list-style: none;
+}
+
+.fabrication-info li p, .date-info p {
+    text-align: left;
+}
+
+.edit-button-area {
+    margin: 15px 0 0 35px;
+}
+
+.edit-product-button {
+    width: 65px;
+    height: 25px;
+    background-color: transparent;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 16px;
+    text-decoration: none;
+    color: #f30000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.edit-product-button:hover {
+    background-color: #f30000;
+    color: #fff;
+}
+
+.under-line-area{
+    display: flex;
+    justify-content: center;
+}
+
+.under-line-product-box {
+    width: 98%;
+    height: 2px;
+    background-color: #ddd;
+}
+
+.delete-product-button img {
+    width: 30px;
+    margin-left: 150px;
+}
 @media (max-width: 725px) {
     
 }
