--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -895,7 +895,7 @@ table{
 }
   
 .tbl-content{
-    height: 65vh;
+    height: 55vh;
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
@@ -917,9 +917,9 @@ tr {
     margin: 0 20px;
 }
 
-th{
-    width: 100%;
-    padding: 10px 10px;
+th { /*NÃO TINHA*/
+    width: 100%; 
+    padding: 10px 7px;
     text-align: left;
     font-weight: 500;
     font-size: 15px;
@@ -927,15 +927,19 @@ th{
     font-weight: 600;
 }
   
-td{
-    width: 100%;
+td {
+    width: 100%; /*NÃO TINHA* WIDTH*/ 
     padding: 10px 7px;
-    text-align: left;
+    text-align: left; /*NÃO TINHA*/
     vertical-align:middle;
     font-weight: 300;
     font-size: 14px;
     color: #777777;
     border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+
+.td-p {
+    padding-left: 25%;
 }
 
 .td-users {
@@ -1074,7 +1078,7 @@ td{
 }
 
 .section-products-table h3 {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .filter-search-area {
@@ -1153,7 +1157,7 @@ td{
 }
 
 .edit-button-area {
-    margin: 15px 0 0 35px;
+    margin: 15px 0 0 30px;
 }
 
 .edit-product-button {
@@ -1190,8 +1194,237 @@ td{
 
 .delete-product-button img {
     width: 30px;
-    margin-left: 150px;
+    margin-left: 80px;
 }
+
+.add-product-form-button {
+    grid-area: area7;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 20px 20px;
+}
+
+.add-product-area-button {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+}
+
+.add-product-button {
+    width: 160px;
+    height: 25px;
+    background-color: transparent;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 16px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #f30000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.add-product-button:hover {
+    color: #f30000;
+    background-color: #fff;
+}
+
+.trash-button {
+    font-size: 14px;
+    text-decoration: none;
+    color: #F30000;
+    font-weight: 600;
+}
+
+.trash-button:hover {
+    border-bottom: 1px solid #f30000;
+}
+
+/*ADD PRODUCT FORM*/
+
+.section-products-form {
+    position: fixed;
+    
+    align-items: center;
+    left: 120px;
+    right: 40px;
+    margin-top: 20px;
+}
+
+.product-form {
+    display: grid;
+    grid-template-areas: 
+        "area1 area1 area1 area1 area1 area1"
+        "area2 area2 area2 area2 area2 area2"
+        "area3 area3 area3 area3 area3 area4"
+        "area5 area5 area5 area5 area5 area5"
+        "area6 area6 area6 area6 area6 area6"
+        ". . . . . area7";
+}
+
+.section-products-form h3 {
+    grid-area: area1;
+    width: 100%;
+    text-align: left;
+    margin: 0 0 15px 10px;
+}
+
+.section-area-products-form {
+    width: 100%;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 13px;
+    padding: 10px;
+}
+
+.product-form label p {
+    margin: 10px 0 10px 0 ;
+}
+
+.label-name {
+    grid-area: area2;
+}
+
+.label-name input {
+    width: 100%;
+    height: 30px;
+    outline: 0;
+    border-radius: 5px;
+    border: 0.5px solid #636363;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    background: #FFFFFF;
+    padding-left: 10px;
+}
+
+.label-desc {
+    grid-area: area3;
+}
+
+.label-desc textarea {
+    width: 100%;
+    height: 270px;
+    resize: none;
+    border-radius: 5px;
+    border: 0.5px solid #636363;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    background: #FFFFFF;
+    outline: 0;
+    padding: 10px 10px;
+    font-size: 14px;
+}
+
+.category-area {
+    grid-area: area4;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    border: 0.5px solid #636363;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    background: #FFFFFF;
+    margin-left: 20px;
+    margin-top: 38px;
+}
+
+.category-area h4 {
+    width: 100%;
+    border-bottom: 0.5px solid #636363;
+    margin-top: 5px;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
+.category-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    font-size: 14px;
+    color: #949494; 
+}
+
+.category-list fieldset {
+    width: 90%;
+    padding: 20px 10px;
+}
+
+.button-add-category-area {
+    display: flex;
+    justify-content: flex-start;
+    width: 90%;
+    margin-top: 10px;
+    font-weight: 500;
+}
+
+.button-add-category-area a {
+    width: 100%;
+    text-align: left;
+    text-decoration: none;
+    color: #f30000;
+    margin-bottom: 15px;
+}
+
+.label-details {
+    grid-area: area5;
+}
+
+.label-details p, .label-name p, .label-desc p {
+    font-size: 16px;
+}
+
+.input-detail-area input{
+    width: 100%;
+    height: 25px;
+    padding-left: 10px;
+    border-radius: 0;
+    border: 1px solid #D9D9D9;
+    outline: 0;
+    box-sizing: border-box;
+}
+
+.photos-area {
+    grid-area: area6;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-photos-area {
+    margin: 10px 0 0 0;
+    border: 0.5px solid #636363;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background: #FFFFFF;
+    padding: 5px 0;
+    width: 250px;
+}
+
+.section-photos-area h4 {
+    width: 100%;
+    text-align: center;
+    border-bottom: 0.5px solid #636363;
+    padding-bottom: 5px;
+    font-weight: 600;
+}
+
+.section-photos-area a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    align-items: center;
+    color: #f30000;
+    margin-bottom: 3px;
+}
+
 @media (max-width: 725px) {
     
 }
