Listagem de produtos concluída e bug consertado na adição do produto

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1275,20 +1275,23 @@ td {
         "area3 area3 area4"
         "area5 area5 area6"
         ". . area7";
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 13px;
+    padding: 10px;
 }
 
 .section-products-form h3 {
     grid-area: area1;
-    width: 1250px;
     text-align: left;
     margin: 0 0 15px 10px;
 }
 
 .section-area-products-form {
-    width: 1250px;
-    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
-    border-radius: 13px;
-    padding: 10px;
+    position: absolute;
+    top: 0;
+    top: 110px;
+    left: 220px;
+    width: calc(100% - 100px);
 }
 
 .product-form label p {
@@ -1441,6 +1444,18 @@ td {
     font-size: 12px;
     margin-bottom: 3px;
     cursor: pointer;
+}
+
+
+@media (max-width: 1400px) {
+    .section-area-products-form {
+        width: auto;
+    }
+
+    .label-details, .label-desc {
+        width: 650px;
+        margin-right: 20px;
+    }
 }
 
 @media (max-width: 725px) {
