--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1278,6 +1278,7 @@ td {
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
     border-radius: 13px;
     padding: 10px;
+    width: 1250px;
 }
 
 .section-products-form h3 {
@@ -1287,11 +1288,11 @@ td {
 }
 
 .section-area-products-form {
-    position: absolute;
+    position: fixed;
     top: 0;
     top: 110px;
-    left: 220px;
-    width: calc(100% - 100px);
+    left: 320px;
+    right: 320px;
 }
 
 .product-form label p {
