--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -882,9 +882,12 @@ label p {
 
 .section-users-table h3 {
     margin-bottom: 25px;
+    padding-left: 20px;
 }
 
 .section-area-users-table {
+    max-height: 65vh;
+    overflow-y: scroll;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
     border-radius: 13px;
 }
@@ -901,7 +904,7 @@ table{
     color: #000;
 }
   
-.tbl-content{
+.tbl-content .filter-form select{
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
@@ -979,14 +982,14 @@ td {
     cursor: pointer;
 }
 
-.add-user-form-label {
+.add-user-form-label, .add-category-form-label {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.add-user-form-label p {
+.add-user-form-label p, .add-category-form-label p {
     color: #000;
     margin: 0 0 10px 0  ;
 }
@@ -1019,7 +1022,6 @@ td {
 
 .form-user-submit:hover {
     background-color: #fff;
-    border: 1px solid #f30000;
     color: #f30000;
 }
 
@@ -1106,7 +1108,7 @@ td {
 
 .filter-form select {
     height: 25px;
-    width: 210px;
+    width: 300px;
     background-color: transparent;
     color: #989898;
     font-family: 'Montserrat';
@@ -1451,6 +1453,46 @@ td {
     cursor: pointer;
 }
 
+/*Categories CSS*/
+.add-category-form {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px 20px;
+}
+.add-category-form-label {
+    margin-right: 40px;
+    font-weight: 600;
+}
+
+.add-category-form-label input {
+    outline: 0;
+    border: none;
+    border-radius: 3px;
+}
+
+.input-category-name {
+    width: 250px;
+    height: 25px;
+}
+
+.input-category-desc {
+    width: 500px;
+    height: 25px;
+}
+
+.td-category {
+    justify-content: flex-start;
+}
+
+.td-category {
+    text-align: center;
+    margin-right: 40px;
+}
+
+.products-count {
+    width: 106px;
+}
 
 @media (max-width: 1400px) {
     .section-area-products-form {
