Iniciando função de editar o produto

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -368,7 +368,7 @@ label p {
     background-color: #F30000;
     width: 80px;
     height: 100vh;
-    position: fixed;
+    position: absolute;
     left: 0;
 }
 
@@ -1519,29 +1519,59 @@ td {
 
 /*Edit Product CSS*/
 
+.label-details-edit {
+    width: 126%;
+}
+
 .section-edit-products-photos {
+    grid-area: area8;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.section-edit-products-photos{
+.section-edit-products-photos {
     margin-top: 20px;
-    grid-area: area8
+}
+
+.edit-photo-img {
+    margin-right: 20px; 
 }
 
 .edit-photo-img img {
     display: flex;
     flex-direction: column;
-    width: 100px;
+    justify-content: center;
+    align-items: center;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 5px;
 }
 
-.edit-photo-img p {
-    padding-left: 2px;
+.edit-photo-img p, .section-sec-photos p {
+    padding: 0 0 5px 2px
 }
 
-.section-edit-products-sec-photos img{
-    width: 100px;
+.section-sec-photos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    
+}
+
+.section-sec-photos img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    max-width: 100px;
+    max-height: 100px;
+    margin-bottom: 20px;
+    min-width: 100px;
+    min-height: 100px;
 }
 
 /*Categories CSS*/
